results page updated

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <script src="bundle.js"></script>
 </head>
 
-<body>
-    <h1>Specials time!</h1>
-</body>
+
+<p class="cool1">Specials time </p>
+
+<p class="cool2">2nd section </p>
 
 </html>
